--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>ART</title>
 </head>
 <body>
     <header>
         <div id="logo">
-            <img src="assets/brand/logo.svg" alt="Aitor Ruiz Torralbo logo">
+            <a href="index.html"><img src="assets/brand/logo.svg" alt="Aitor Ruiz Torralbo logo"></a>
         </div>
         <nav>
             <a href="#about">About</a>
@@ -17,8 +18,7 @@
             <a href="#contact">Contact</a>
         </nav>
         <div id="action">
-            <div id="action-text"><p>Resume</p></div>
-            <div id="action-icon"><img src="assets/icons/arrow-right.svg" alt="arrow right"></div>
+            <a href="resume.html">Resume</a>
         </div>
     </header>
     <section id="about">
