html + css first

--- a/index.html
+++ b/index.html
@@ -41,16 +41,16 @@
         </div>
         <div id="skills-columns">
             <div id="left-column">
-                <p>HTML</p>
+                <p><span>HTML</span></p>
                 <p>CSS</p>
-                <p>JavaScript</p>
+                <p><span>JavaScript</span></p>
                 <p>PHP</p>
             </div>
             <div id="right-column">
                 <p>Laravel</p>
-                <p>Git/Github</p>
+                <p><span>Git/Github</span></p>
                 <p>MySQL</p>
-                <p>SQL</p>
+                <p><span>SQL</span></p>
             </div>
         </div>
     </section>
@@ -59,7 +59,7 @@
             <h1>Contact</h1>
         </div>
         <div id="contact-types">
-            <div id="contact-types-phone">
+            <div class="contact-types-box">
                 <div id="contact-types-phone-img">
                     <img src="assets/icons/phone.svg" alt="phone icon">
                 </div>
@@ -67,7 +67,7 @@
                     <p>Phone</p>
                 </div>
             </div>
-            <div id="contact-types-email">
+            <div class="contact-types-box">
                 <div id="contact-types-email-img">
                     <img src="assets/icons/email.svg" alt="email icon">
                 </div>
@@ -75,7 +75,7 @@
                     <p>Email</p>
                 </div>
             </div>
-            <div id="contact-types-linkedin">
+            <div class="contact-types-box">
                 <div id="contact-types-linkedin-img">
                     <img src="assets/icons/linkedin.svg" alt="linkedin icon">
                 </div>
