--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
             <a href="#contact">Contact</a>
         </nav>
         <div id="action">
-            <a href="resume.html">Resume</a>
+            <a href="resume.html">
+                
+            </a>
         </div>
     </header>
     <section id="about">
