fix and changes

--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
             <a href="#contact">Contact</a>
         </nav>
         <div id="action">
-            <a href="resume.html">
-                
-            </a>
+            <a href="/assets/brand/en_CV_Ruiz_Torralbo_Aitor.pdf" download target="blank""></a>
         </div>
     </header>
     <section id="about">
@@ -62,28 +60,31 @@
         </div>
         <div id="contact-types">
             <div class="contact-types-box">
+                <a href="tel:648217167">
                 <div id="contact-types-phone-img">
                     <img src="assets/icons/phone.svg" alt="phone icon">
                 </div>
                 <div id="contact-types-phone-text">
                     <p>Phone</p>
-                </div>
+                </div></a>
             </div>
             <div class="contact-types-box">
+                <a href="mailto:workaitorruto@gmail.com">
                 <div id="contact-types-email-img">
                     <img src="assets/icons/email.svg" alt="email icon">
                 </div>
                 <div id="contact-types-email-text">
                     <p>Email</p>
-                </div>
+                </div></a>
             </div>
             <div class="contact-types-box">
+                <a href="https://linkedin.com/in/aitor-ruiz" target="_blank">
                 <div id="contact-types-linkedin-img">
                     <img src="assets/icons/linkedin.svg" alt="linkedin icon">
                 </div>
                 <div id="contact-types-linkedin-text">
                     <p>Linkedin</p>
-                </div>
+                </div></a>
             </div>
         </div>
         <div id="contact-description">
