--- a/index.html
+++ b/index.html
@@ -9,86 +9,96 @@
 </head>
 <body>
     <header>
-        <div id="logo">
-            <a href="index.html"><img src="assets/brand/logo.svg" alt="Aitor Ruiz Torralbo logo"></a>
-        </div>
-        <nav>
-            <a href="#about">About</a>
-            <a href="#skills">Skills</a>
-            <a href="#contact">Contact</a>
-        </nav>
-        <div id="action">
-            <a href="/assets/brand/en_CV_Ruiz_Torralbo_Aitor.pdf" download target="blank""></a>
+        <div id="header-container">
+            <div id="logo">
+                <a href="index.html"><img src="assets/brand/logo.svg" alt="Aitor Ruiz Torralbo logo"></a>
+            </div>
+            <nav>
+                <a href="#about">About</a>
+                <a href="#skills">Skills</a>
+                <a href="#contact">Contact</a>
+            </nav>
+            <div id="action">
+                <a href="/assets/brand/en_CV_Ruiz_Torralbo_Aitor.pdf" download target="blank""></a>
+            </div>
         </div>
     </header>
     <section id="about">
-        <div id="about-image">
-            <img src="assets/brand/aitor.png" alt="personal photo of Aitor Ruiz Torralbo">
-        </div>
-        <div id="about-subtitle">
-            <h2>Aitor Ruiz</h2>
-        </div>
-        <div id="about-title">
-            <h1>Web Developer</h1>
-        </div>
-        <div id="about-description">
-            <p>Young <span>ambitious</span> web <span>developer</span> that you should will hire.</p>
+        <div id="about-container">
+            <div id="about-image">
+                <img src="assets/brand/aitor.png" alt="personal photo of Aitor Ruiz Torralbo">
+            </div>
+            <div id="about-title-container">
+                <div id="about-subtitle">
+                    <h2>Aitor Ruiz</h2>
+                </div>
+                <div id="about-title">
+                    <h1>Junior Web Developer</h1>
+                </div>
+            </div>
+            <div id="about-description">
+                <p>Young <span>ambitious</span> web <span>developer</span> that you should will hire.</p>
+            </div>
         </div>
     </section>
     <section id="skills">
-        <div id="skills-title">
-            <h1>Skills</h1>
-        </div>
-        <div id="skills-columns">
-            <div id="left-column">
-                <p><span>HTML</span></p>
-                <p>CSS</p>
-                <p><span>JavaScript</span></p>
-                <p>PHP</p>
+        <div id="skills-container">
+            <div id="skills-title">
+                <h1>Skills</h1>
             </div>
-            <div id="right-column">
-                <p>Laravel</p>
-                <p><span>Git/Github</span></p>
-                <p>MySQL</p>
-                <p><span>SQL</span></p>
+            <div id="skills-columns">
+                <div id="left-column">
+                    <p><span>HTML</span></p>
+                    <p>CSS</p>
+                    <p><span>JavaScript</span></p>
+                    <p>PHP</p>
+                </div>
+                <div id="right-column">
+                    <p>Laravel</p>
+                    <p><span>Git/Github</span></p>
+                    <p>MySQL</p>
+                    <p><span>SQL</span></p>
+                </div>
             </div>
         </div>
     </section>
     <section id="contact">
-        <div id="contact-title">
-            <h1>Contact</h1>
-        </div>
-        <div id="contact-types">
-            <div class="contact-types-box">
-                <a href="tel:648217167">
-                <div id="contact-types-phone-img">
-                    <img src="assets/icons/phone.svg" alt="phone icon">
-                </div>
-                <div id="contact-types-phone-text">
-                    <p>Phone</p>
-                </div></a>
+        <div id="contact-container">
+            <div id="contact-title">
+                <h1>Contact</h1>
             </div>
-            <div class="contact-types-box">
-                <a href="mailto:workaitorruto@gmail.com">
-                <div id="contact-types-email-img">
-                    <img src="assets/icons/email.svg" alt="email icon">
+            <div id="contact-types">
+                <div class="contact-types-box">
+                    <a href="tel:648217167">
+                    <div id="contact-types-phone-img">
+                        <img src="assets/icons/phone.svg" alt="phone icon">
+                    </div>
+                    <div id="contact-types-phone-text">
+                        <p>Phone</p>
+                    </div></a>
                 </div>
-                <div id="contact-types-email-text">
-                    <p>Email</p>
-                </div></a>
-            </div>
-            <div class="contact-types-box">
-                <a href="https://linkedin.com/in/aitor-ruiz" target="_blank">
-                <div id="contact-types-linkedin-img">
-                    <img src="assets/icons/linkedin.svg" alt="linkedin icon">
+                <div class="contact-types-box">
+                    <a href="mailto:workaitorruto@gmail.com">
+                    <div id="contact-types-email-img">
+                        <img src="assets/icons/email.svg" alt="email icon">
+                    </div>
+                    <div id="contact-types-email-text">
+                        <p><span>Email</span></p>
+                    </div></a>
                 </div>
-                <div id="contact-types-linkedin-text">
-                    <p>Linkedin</p>
-                </div></a>
+                <div class="contact-types-box">
+                    <a href="https://linkedin.com/in/aitor-ruiz" target="_blank">
+                    <div id="contact-types-linkedin-img">
+                        <img src="assets/icons/linkedin.svg" alt="linkedin icon">
+                    </div>
+                    <div id="contact-types-linkedin-text">
+                        <p>Linkedin</p>
+                    </div></a>
+                </div>
             </div>
-        </div>
-        <div id="contact-description">
-            <p>Contact me for <span>any</span> question.</p>
+            <div id="contact-description">
+                <p>Contact me for <span>any</span> question.</p>
+            </div>
         </div>
     </section>
     <footer>
