--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="/assets/brand/logo.svg" type="image/x-icon">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <title>Aitor Ruiz Website</title>
 </head>
 <body>
     <header>
         <div id="header-container">
             <div id="logo">
-                <a href="index.html"><img src="assets/brand/logo.svg" alt="Aitor Ruiz Torralbo logo"></a>
+                <a href="index.html"><img src="/assets/brand/logo.svg" alt="Aitor Ruiz Torralbo logo"></a>
             </div>
             <nav>
                 <a href="#about">About</a>
