--- a/index.html
+++ b/index.html
@@ -115,6 +115,6 @@
             <p>© 2021 Aitor Ruiz Torralbo. All rights reserved.</p>
         </div>
     </footer>    
-    <script src="/js/app.js"></script>
+    <script src="./js/app.js"></script>
 </body>
 </html>
