--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="/assets/brand/logo.svg" type="image/x-icon">
-    <link rel="stylesheet" href="/aitorriz/css/style.css">
+    <link rel="stylesheet" href="/aitorruiz/css/style.css">
     <title>Aitor Ruiz Website</title>
 </head>
 <body>
