--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/assets/brand/logo.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="/aitorruiz/assets/brand/logo.svg" type="image/x-icon">
     <link rel="stylesheet" href="/aitorruiz/css/style.css">
     <title>Aitor Ruiz Website</title>
 </head>
@@ -12,7 +12,7 @@
     <header>
         <div id="header-container">
             <div id="logo">
-                <a href="index.html"><img src="/assets/brand/logo.svg" alt="Aitor Ruiz Torralbo logo"></a>
+                <a href="index.html"><img src="/aitorruiz/assets/brand/logo.svg" alt="Aitor Ruiz Torralbo logo"></a>
             </div>
             <nav>
                 <a href="#about">About</a>
@@ -20,7 +20,7 @@
                 <a href="#contact">Contact</a>
             </nav>
             <div id="action">
-                <a href="/assets/brand/en_CV_Ruiz_Torralbo_Aitor.pdf" download target="blank"></a>
+                <a href="/aitorruiz/assets/brand/en_CV_Ruiz_Torralbo_Aitor.pdf" download target="blank"></a>
             </div>
         </div>
     </header>
@@ -35,7 +35,7 @@
                         <p>My name is Aitor Ruiz Torralbo, I am a web developer from Viladecans, Barcelona, ​​Spain born on March 14, 2001. I have finished the upper cycle of web application development. My core skills are HTML, CSS, PHP. My native languages are Spanish and Catalan and I'm very experienced with english. My goal is to improve my level and knowledge to create my own company in the future.</p>
                     </div>
                   </div>
-                <img id="about-image-me" onmouseover="bigImg(this)" onmouseout="normalImg(this)" src="assets/brand/aitor.png" alt="Photo by Aitor Ruiz">
+                <img id="about-image-me" onmouseover="bigImg(this)" onmouseout="normalImg(this)" src="/aitorruiz/assets/brand/aitor.png" alt="Photo by Aitor Ruiz">
             </div>
             <div id="about-title-container">
                 <div id="about-subtitle">
@@ -115,6 +115,6 @@
             <p>© 2021 Aitor Ruiz Torralbo. All rights reserved.</p>
         </div>
     </footer>    
-    <script src="/js/app.js"></script>
+    <script src="/aitorruiz/js/app.js"></script>
 </body>
 </html>
