--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <a href="#contact">Contact</a>
             </nav>
             <div id="action">
-                <a href="/aitorruiz/assets/brand/en_CV_Ruiz_Torralbo_Aitor.pdf" download target="blank"></a>
+                <a href="/aitorruiz/assets/brand/en_CV_Ruiz_Torralbo_Aitor.pdf" download></a>
             </div>
         </div>
     </header>
