Changed title text from photo

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <p>My name is Aitor Ruiz Torralbo, I am a web developer from Viladecans, Barcelona, ​​Spain born on March 14, 2001. I have finished the upper cycle of web application development. My core skills are HTML, CSS, PHP. My native languages are Spanish and Catalan and I'm very experienced with english. My goal is to improve my level and knowledge to create my own company in the future.</p>
                     </div>
                   </div>
-                <img id="about-image-me" onmouseover="bigImg(this)" onmouseout="normalImg(this)" src="/aitorruiz/assets/brand/aitor.png" alt="Photo by Aitor Ruiz">
+                <img id="about-image-me" onmouseover="bigImg(this)" onmouseout="normalImg(this)" src="/aitorruiz/assets/brand/aitor.png" alt="Aitor Ruiz Torralbo">
             </div>
             <div id="about-title-container">
                 <div id="about-subtitle">
